--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/peter_ayeni.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/peter_ayeni_index.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/peter_ayeni.html">Peter Ayeni</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Passionate about using technology and design for social good</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Check out my profile.</p>
                 </div>
                 <div class="clear"></div>
               </li>
