added bio changes to li xie profile
added some extra info

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                       <a href="students/li_xie.html">Li Xie</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Let's go!</p>
                 </div>
                 <div class="clear"></div>
 
