--- a/students/li_xie.html
+++ b/students/li_xie.html
@@ -103,10 +103,10 @@
       <div class="page-title">
         <h4 class="ib_main_header">Li Xie</h4>
         <div class="social-icons">
-          <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
+          <!--<a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>-->
           <a href="ttps://www.linkedin.com/in/li-xie-b850205a/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
           <a href="https://github.com/Liko"><i class="icon-github ib-social-icons"></i></a>
-          <a href="#"><i class="icon-rss ib-social-icons"></i></a>
+          <!--<a href="#"><i class="icon-rss ib-social-icons"></i></a>-->
         </div>
 
         <div class="section section-testimonials-curriculum quote-div">
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>"I'm hungry, is it lunch time yet?"</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                  MEng Biochemical Engineering and a MSc Computer Science Degree @ UCL. Combined those for experience in Bioinformatics, and development of Mixed Reality Medical Applications. I like travel, trying new food, football and run a Gaming YouTube channel in my spare time.
                 </p>
               </div>
             </div>
@@ -148,8 +148,9 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>Biochemical Engineering and Computer Science</li>
-                  <li>Other School</li>
+                  <li>BEng UCL Biochemical Engineering</li>
+                  <li>UCL Computer Science</li>
+                  <li>University of Toronto Chemical Engineering</li>
                 </ul>
               </div>
             </div>
@@ -158,9 +159,10 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <br>
+                <h4>Wellcome Sanger Institute</h4>
                 <p>
-                  Blurb about company...
+                  Genetics and bioinformatics!
                 </p>
               </div>
             </div>
@@ -176,9 +178,10 @@
               <div class="services-wrap section coder-cred" id="equalize">
 
                 <div class="column fourth">
-                  <a href="http://www.github.com/" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
+                  <a href="http://www.github.com/Liko" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
                 </div>
 
+                <!--
                 <div class="column fourth">
                   <a href="http://teamtreehouse.com" target="_blank"><img src="../img/treehouse.png" alt="Treehouse" width="130px"></a>
                 </div>
@@ -190,6 +193,7 @@
                 <div class="column fourth">
                   <a href="https://coderwall.com/" target="_blank"><img src="../img/coderwall.png" alt="Coder Wall" width="130"></a>
                 </div>
+            -->
               </div>
               <! -- End Service -->
             </div>
@@ -259,9 +263,8 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      <a>Buenos Aires</a><br>
-                      <a>Barcelona</a><br>
-                      <a>Minneapolis</a><br>
+                      <a>London</a><br>
+                      <a>Singapore</a><br>
                       <a>New York</a><br>
                     </p>
                   </div>
@@ -273,9 +276,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="https://www.youtube.com/">Youtube</a><br>
+                    - Favorite Comic: <a href="https://www.pokemon.com/us/">Pokemon</a><br>
+                    - Favorite Radio Program: <a href="https://www.bbc.co.uk/sounds/play/live:bbc_radio_five_live">BBC Radio 5</a><br>
                   </p>
                 </div>
               </div>
@@ -350,7 +353,7 @@
     </div>
   </div>
   <!-- End Footer -->
-  
+
   <script type='text/javascript' src="../js/jquery.js"></script>
   <script type='text/javascript' src="../js/smooth-scroll.js"></script>
   <script type="text/javascript">
