--- a/students/gee_wey.html
+++ b/students/gee_wey.html
@@ -101,11 +101,11 @@
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Gee-Wey</h4>
         <div class="social-icons">
-          <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
+          <a href="https://twitter.com/geewey"><i class="icon-twitter ib-social-icons"></i></a>
+          <a href="http://www.linkedin.com/in/geewey/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://github.com/geewey"><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>“Go Go Captain Planet!” - Planeteers</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                    Gee-Wey Yue is a current software development student at Flatiron School London. He previously worked in nonprofit and public sector roles in New York and Houston, Texas.
                 </p>
               </div>
             </div>
@@ -148,8 +148,7 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>The University of Texas in Austin, BBA in Finance</li>
                 </ul>
               </div>
             </div>
@@ -158,10 +157,15 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
-                <p>
-                  Blurb about company...
-                </p>
+                <ul>
+                    <li>
+                        <h4>Museum of Chinese in New York</h4>
+                        <p>
+                            Business development
+                        </p>
+                    </li>
+                </ul>
+                
               </div>
             </div>
           </div>
@@ -176,7 +180,7 @@
               <div class="services-wrap section coder-cred" id="equalize">
 
                 <div class="column fourth">
-                  <a href="http://www.github.com/" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
+                  <a href="http://www.github.com/geewey" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
                 </div>
 
                 <div class="column fourth">
@@ -226,7 +230,7 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="#">Personal Blog</a><br>
+                      - <a href="http://geewey.github.io">Personal Blog</a><br>
                       - <a href="#">Tumblr</a><br>
                     </p>
                   </div>
