--- a/students/li_xie.html
+++ b/students/li_xie.html
@@ -74,7 +74,7 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Lie Xie</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Li Xie</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -103,10 +103,8 @@
       <div class="page-title">
         <h4 class="ib_main_header">Li Xie</h4>
         <div class="social-icons">
-          <!--<a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>-->
           <a href="ttps://www.linkedin.com/in/li-xie-b850205a/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
           <a href="https://github.com/Liko"><i class="icon-github ib-social-icons"></i></a>
-          <!--<a href="#"><i class="icon-rss ib-social-icons"></i></a>-->
         </div>
 
         <div class="section section-testimonials-curriculum quote-div">
@@ -149,8 +147,7 @@
                 <div class="clear"></div>
                 <ul>
                   <li>BEng UCL Biochemical Engineering</li>
-                  <li>UCL Computer Science</li>
-                  <li>University of Toronto Chemical Engineering</li>
+                  <li>MEng UCL Computer Science</li>
                 </ul>
               </div>
             </div>
@@ -162,7 +159,7 @@
                 <br>
                 <h4>Wellcome Sanger Institute</h4>
                 <p>
-                  Genetics and bioinformatics!
+                  Genetics and Bioinformatics!
                 </p>
               </div>
             </div>
@@ -181,19 +178,7 @@
                   <a href="http://www.github.com/Liko" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
                 </div>
 
-                <!--
-                <div class="column fourth">
-                  <a href="http://teamtreehouse.com" target="_blank"><img src="../img/treehouse.png" alt="Treehouse" width="130px"></a>
-                </div>
 
-                <div class="column fourth">
-                  <a href="http://www.codeschool.com" target="_blank"><img src="../img/codeschool.jpg" alt="Code School" width="130"></a>
-                </div>
-
-                <div class="column fourth">
-                  <a href="https://coderwall.com/" target="_blank"><img src="../img/coderwall.png" alt="Coder Wall" width="130"></a>
-                </div>
-            -->
               </div>
               <! -- End Service -->
             </div>
