--- a/students/gee_wey.html
+++ b/students/gee_wey.html
@@ -106,7 +106,7 @@
           <a href="https://twitter.com/geewey"><i class="icon-twitter ib-social-icons"></i></a>
           <a href="http://www.linkedin.com/in/geewey/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
           <a href="https://github.com/geewey"><i class="icon-github ib-social-icons"></i></a>
-          <a href="#"><i class="icon-rss ib-social-icons"></i></a>
+          <a href="https://geewey.github.io"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
         <div class="section section-testimonials-curriculum quote-div">
@@ -183,7 +183,8 @@
                   <a href="http://www.github.com/geewey" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
                 </div>
 
-                <div class="column fourth">
+                <!--
+                    <div class="column fourth">
                   <a href="http://teamtreehouse.com" target="_blank"><img src="../img/treehouse.png" alt="Treehouse" width="130px"></a>
                 </div>
 
@@ -194,6 +195,7 @@
                 <div class="column fourth">
                   <a href="https://coderwall.com/" target="_blank"><img src="../img/coderwall.png" alt="Coder Wall" width="130"></a>
                 </div>
+                -->
               </div>
               <! -- End Service -->
             </div>
@@ -208,8 +210,10 @@
               </div>
 
               <div class="services-wrap" id="equalize">
-                <div id="ok-text-column-2" class="column ok-text-column" style="height: 204px;">
+                  <!--
+                        <div id="ok-text-column-2" class="column ok-text-column" style="height: 204px;">
                   <div class="services">
+                    
                     <div class="services-title">
                       <h3>Coding Profiles</h3>
                     </div>
@@ -222,6 +226,8 @@
                     </p>
                   </div>
                 </div>
+                   -->
+                
 
                 <div id="ok-text-column-3" class="column ok-text-column" style="height: 204px;">
                   <div class="services">
@@ -235,16 +241,18 @@
                     </p>
                   </div>
                 </div>
-
-                <div id="ok-text-column-4" class="column ok-text-column" style="height: 204px;">
-                  <div class="services">
-                    <div class="services-title">
-                      <h3>Personal Projects</h3>
+                <!--
+                    <div id="ok-text-column-4" class="column ok-text-column" style="height: 204px;">
+                    <div class="services">
+                        <div class="services-title">
+                        <h3>Personal Projects</h3>
+                        </div>
+                        <div class="clear"></div>
+                        <p>Coming Soon..</p>
                     </div>
-                    <div class="clear"></div>
-                    <p>Coming Soon..</p>
-                  </div>
-                </div>
+                    </div>
+                -->
+
             </div>
           </div>
 
@@ -263,10 +271,10 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      <a>Buenos Aires</a><br>
-                      <a>Barcelona</a><br>
-                      <a>Minneapolis</a><br>
-                      <a>New York</a><br>
+                      <a>Silistra, Bulgaria</a><br>
+                      <a>Tokyo, Japan</a><br>
+                      <a>Ohio</a><br>
+                      <a>The Moon</a><br>
                     </p>
                   </div>
                 </div>
@@ -277,9 +285,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="https://espn.go.com">ESPN</a><br>
+                    - Favorite Comic: <a href="https://en.wikipedia.org/wiki/One-Punch_Man">One-Punch Man</a><br>
+                    - Favorite Radio Program: <a href="https://www.youtube.com/watch?v=ZX7dTSZqo74">Yellowclaw Mixtape #5</a><br>
                   </p>
                 </div>
               </div>
