updated index.html student 1 and 2 profiles to reflect changes

--- a/index.html
+++ b/index.html
@@ -105,23 +105,23 @@
                             <!-- Begin Student 1 -->
                             <li class="home-blog-post">
                                 <div class="blog-thumb">
-                                    <a href="students/student_name.html">
-                                        <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                                    <a href="students/gee_wey.html">
+                                        <img width="304" height="304" class="prof-image" src="img/students/geewey_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                                     </a>
                                 </div>
 
                                 <div class="blog-title">
                                     <div class="big-comment">
                                         <h3>
-                                            <a href="students/student_name.html">Student Name</a>
+                                            <a href="students/gee_wey.html">Gee-Wey</a>
                                         </h3>
                                     </div>
-                                    <p class="home-blog-post-meta">Tag Line</p>
+                                    <p class="home-blog-post-meta">“Go Go Captain Planet!” - Planeteers</p>
                                 </div>
                                 <div class="clear"></div>
 
                                 <div class="excerpt">
-                                    <p>Excerpt.</p>
+                                    <p>I am a master coder and I do cool shit.</p>
                                 </div>
                                 <div class="clear"></div>
                             </li>
@@ -130,23 +130,23 @@
                             <!-- Begin Student 2 -->
                             <li class="home-blog-post">
                                 <div class="blog-thumb">
-                                    <a href="students/student_name.html">
-                                        <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                                    <a href="students/niki_nedelchev.html">
+                                        <img width="304" height="304" class="prof-image" src="img/students/niki_nedelchev_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                                     </a>
                                 </div>
 
                                 <div class="blog-title">
                                     <div class="big-comment">
                                         <h3>
-                                            <a href="students/student_name.html">Student Name</a>
+                                            <a href="students/niki_nedelchev.html">Niki Nedelchev</a>
                                         </h3>
                                     </div>
-                                    <p class="home-blog-post-meta">Tag Line</p>
+                                    <p class="home-blog-post-meta">"Respect my authoratay"</p>
                                 </div>
                                 <div class="clear"></div>
 
                                 <div class="excerpt">
-                                    <p>Excerpt.</p>
+                                    <p>I like making games and doing stuff.</p>
                                 </div>
                                 <div class="clear"></div>
                             </li>
