--- a/students/Peter_Sampson.html
+++ b/students/Peter_Sampson.html
@@ -171,7 +171,7 @@
               <div class="services-wrap section coder-cred" id="equalize">
 
                 <div class="section-title">
-                  <a href="http://www.github.com/" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px" ></a>
+                  <a href="http://www.github.com/petersampson010" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px" ></a>
                 </div>
               </div>
               <! -- End Service -->
