--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <!-- Begin Title Content -->
             <div class="page-title">
                 <h2>Every Story Has Heroes</h2>
-                <h3>We're 32 people on a journey to learn to love code.</h3>
+                <h3>We're 2 dudes on a journey to learn to love code.</h3>
             </div>
             <!-- End Title Content -->
 
@@ -93,7 +93,7 @@
             <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
                 <div class="section section-services student-index">
                     <div class="section-title">
-                        <span>Flatiron School Class 003</span>
+                        <span>Flatiron School Class of 2019</span>
                     </div>
                 </div>
 
