shortened page title line

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
                 <div class="section section-services student-index">
                     <div class="section-title">
-                        <span>Flatiron School Class of 2019</span>
+                        <span>Flatiron School c/o 2019</span>
                     </div>
                 </div>
 
