added to master

--- a/index.html
+++ b/index.html
@@ -97,27 +97,28 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/alex_shom.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/alex_shom_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="alex_shom">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/alex_shom.html">Alex Shom</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">I'm a wizard harry?</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>An excerpt of exceptional standard</p>
                 </div>
                 <div class="clear"></div>
               </li>
               <!-- End Student 1 -->
+
 
               <!-- Begin Student 2 -->
               <li class="home-blog-post">
