--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/Peter_Sampson.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/peter_index.JPG" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/peter_index.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
