--- a/index.html
+++ b/index.html
@@ -97,48 +97,49 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/alex_shom.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/alex_shom_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="alex_shom">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/alex_shom.html">Alex Shom</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">I'm a wizard harry?</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>An excerpt of exceptional standard</p>
                 </div>
                 <div class="clear"></div>
               </li>
               <!-- End Student 1 -->
 
+
               <!-- Begin Student 2 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/Peter_Sampson.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/peter_index.JPG" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/Peter_Sampson.html">Peter Sampson</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Some say I like sport</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>24. Born in London. Sport Sport Sport. </p>
                 </div>
                 <div class="clear"></div>
               </li>
@@ -147,52 +148,27 @@
               <!-- Begin Student 3 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/Caroline_Seilern.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/proffr.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Caroline Seilern</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Insert text here</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Born in Austria and lived in many European countries before moving to London 5 years ago. Trained portrait painter who enjoys art.</p>
                 </div>
                 <div class="clear"></div>
               </li>
               <!-- End Student 3 -->
-
-              <!-- Begin Student 4 -->
-              <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
-                  </a>
-                </div>
-
-                <div class="blog-title">
-                  <div class="big-comment">
-                    <h3>
-                      <a href="students/student_name.html">Student Name</a>
-                    </h3>
-                  </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
-                </div>
-                <div class="clear"></div>
-
-                <div class="excerpt">
-                  <p>Excerpt.</p>
-                </div>
-                <div class="clear"></div>
-              </li>
-              <!-- End Student 4 -->
 
               <!-- Duplicate li code block above to place more students here -->
 
